@@ -3,6 +3,7 @@
  * Fix filtering on clustering columns when 2i is used (CASSANDRA-11907)
  * Reduce contention getting instances of CompositeType (CASSANDRA-10433)
  * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)
+ * Release sstables of failed stream sessions only when outgoing transfers are finished (CASSANDRA-11345)
 
 2.1.15
  * Account for partition deletions in tombstone histogram (CASSANDRA-12112)
